--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
     "core-js": "^2.4.1",
+    "ng2-ckeditor": "^1.1.5",
     "ng2-simple-page-scroll": "^1.0.3-beta",
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.7.2",
