--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/grecaptcha": "^2.0.30",
     "@types/jasmine": "^2.2.30",
+    "@types/marked": "0.0.28",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.17",
     "codelyzer": "~0.0.26",
